# NaviThingy

./: .gitignore  LICENSE  PKGBUILD  PKGBUILD-bin  README.md  bun.lockb  eslint.config.js  navithingy.install  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/workflows/: aur-release-bin.yml  aur-release.yml  tauri-release.yml
src/: app.css  app.html  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs  main.rs  mpv.rs
src/lib/: lastfm.ts  mediaSession.ts  navidrome.ts
src/lib/client/: util.ts
src/lib/components/: Album.svelte  AudioPlayer.svelte  ContextMenu.svelte  HeroSong.svelte  MobilePlayer.svelte  Modal.svelte  Navigation.svelte  Queue.svelte  Rating.svelte  Search.svelte  Sidebar.svelte  Song.svelte
src/lib/stores/: client.ts  discord.ts  player.ts  queue.ts  queueStore.ts  selectedServer.ts  servers.ts  sidebarOpen.ts  theme.ts
src/lib/types/: navidrome.d.ts  theme.d.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/album/[id]/: +page.svelte
src/routes/albums/: +page.svelte
src/routes/albums/[id]/: +page.svelte
src/routes/artist/[id]/: +page.svelte
src/routes/artists/: +page.svelte
src/routes/artists/[id]/: +page.svelte
src/routes/genres/: +page.svelte
src/routes/home/: +page.svelte
src/routes/playlists/: +page.svelte
src/routes/playlists/[id]/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/song/[id]/: +page.svelte
src/routes/songs/: +page.svelte
src/routes/songs/[id]/: +page.svelte
