[package]
name = "navithingy"
version = "0.5.0"
description = "A navidrome client for desktop made by vMohammad"
authors = ["vMohammad"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "navithingy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
opt-level = 0 # No optimizations in dev builds.
panic = "unwind" # Keep stack traces for debugging.
debug = true # Include debug information.
debug-assertions = true # Enable debug assertions.
overflow-checks = true # Check for integer overflow.
codegen-units = 16 # Use 16 threads for code generation.


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Optimize for size.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
