[package]
name = "navithingy"
version = "0.8.4"
description = "A navidrome client for desktop made by vMohammad"
authors = ["vMohammad"]
edition = "2021"


[lib]
name = "navithingy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.17.0", features = ["v4"] }
which = "8.0.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-http = { version = "2.5.1", features = ["unsafe-headers"] }

[target.'cfg(target_os = "windows")'.dependencies]
named_pipe = "0.4"
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-updater = "2.7.0"
tauri-plugin-window-state = "2.2.2"
discord-rich-presence = "0.2.5"

[profile.dev]
incremental = true
opt-level = 0
panic = "unwind"
debug = true
debug-assertions = true
overflow-checks = true 
codegen-units = 16

[profile.release]
codegen-units = 1 
lto = true
opt-level = "z"
panic = "abort"
strip = true
